--- a/style/general.scss
+++ b/style/general.scss
@@ -2,6 +2,7 @@ html {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background-color: #333;
   color: white;
+  min-height: 100%;
 }
 
 body {
